--- a/package.json
+++ b/package.json
@@ -4,21 +4,57 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "cross-env NODE_ENV=development nodemon index.js",
+    "lint": "eslint .",
+    "fix": "eslint . --fix",
+    "start": "cross-env NODE_ENV=production node index.js",
+    "test": "cross-env NODE_ENV=test PORT=1234 jest --verbose --silent tests/user.test.js",
+    "test:watch": "npm run test -- --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "nodemon": "2.0.12"
+    "eslint": "7.20.0",
+    "eslint-plugin-import": "^2.24.2",
+    "jest": "27.1.0",
+    "nodemon": "2.0.12",
+    "standard": "^16.0.3",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
     "express": "4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.4",
     "morgan": "^1.10.0"
+  },
+  "eslintConfig": {
+    "extends": "./node_modules/standard/eslintrc.json",
+    "rules": {
+      "semi": [
+        2,
+        "always"
+      ],
+      "comma-dangle": [
+        "error",
+        {
+          "arrays": "ignore",
+          "objects": "always-multiline",
+          "imports": "never",
+          "exports": "never",
+          "functions": "ignore"
+        }
+      ]
+    },
+    "env": {
+      "jest": true
+    }
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
