--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint .",
     "fix": "eslint . --fix",
     "start": "cross-env NODE_ENV=production node index.js",
+    "start:test": "cross-env NODE_ENV=test node index.js",
     "test": "cross-env NODE_ENV=test PORT=1234 jest --verbose --silent tests/user.test.js",
     "test:watch": "npm run test -- --watch"
   },
